[gd_scene load_steps=12 format=2]

[ext_resource path="res://tilesets/human/npc/servidor.png" type="Texture" id=1]
[ext_resource path="res://script/NPCs/npc_a.gd" type="Script" id=2]
[ext_resource path="res://scenes/balloon/speech_bubble.tscn" type="PackedScene" id=3]
[ext_resource path="res://data/dialogs/npc_a.tres" type="Resource" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 6.5, 7.5 )

[sub_resource type="CircleShape2D" id=7]
radius = 58.0775

[node name="servidor_A" type="KinematicBody2D"]
script = ExtResource( 2 )
interation = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 5 )
animation = "idle"
frame = 1
playing = true

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 15.5 )
shape = SubResource( 6 )

[node name="detecion_area" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="detecion_area"]
position = Vector2( 1, 0 )
shape = SubResource( 7 )

[node name="speech_bubble" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 7, -10 )

[connection signal="body_entered" from="detecion_area" to="." method="_on_body_entered"]
[connection signal="body_exited" from="detecion_area" to="." method="_on_body_exited"]
